# another_ccia_code_examples

./: CMakeLists.txt  README.md
include/: mutex.h  quicksort.h  share_data.h  synchronize.h  thread_mgr.h  threadsafe_lockfree_queue_v1.h  threadsafe_lockfree_queue_v2.h  threadsafe_lockfree_stack.h  threadsafe_queue.h  threadsafe_stack.h
src/lockfree/: lockfree_queue.cc  lockfree_stack.cc
src/mutex/: dangling_ref.cc  movable.cc
src/share_data/: blow_a_hole.cc  deadlock_mutualjoin.cc  deadlock_nestedmutex.cc  deadlock_stdlock.cc  hierarchial_mutex.cc  lock_guard.cc  threadsafe_stack.cc  threadunsafe_stack.cc
src/synchronize/: condition_var.cc  packaged_task.cc  promise.cc  threadsafe_queue.cc  time.cc
src/thread_mgr/: dangling_ref.cc  init_func.cc  movable.cc
test/: test_lockfree.cc  test_mutex.cc  test_share_data.cc  test_synchronize.cc  test_thread_mgr.cc
